--- a/css/style.css
+++ b/css/style.css
@@ -2,72 +2,52 @@
 amarillo 2: #F2B705 
 texto: #F0F0F0*/
 
-nav {
-  margin-right:120px;
-}
-.verticalNav {
-  width : 40px;
-  position:fixed;
-  height:100vh;
-  top:0;
-  right:0;
-  writing-mode: vertical-rl;
-  text-orientation: upright;
-  line-height:40px;
-  text-transform : uppercase;
-  cursor:pointer;
-  transition : all 300ms ease-in;
-  border-right : 2px solid #232323
+#headerNav {
+  margin-left: 15rem;
+  margin-right: 15rem;
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
+  backdrop-filter: blur(0.25rem);
+  background: rgba(140, 56, 48, 0.414);
 }
 
-.verticalNav:hover {
-  width : 100%;
-  writing-mode: unset;
-  text-orientation: sideways;
+#headerNav .nav-link {
+  color: #FFFF;
 }
 
-.verticalNav:hover .navContent {
-  margin-left:120px;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  height:100vh
-}
-.navContent p{
-  line-height:1.2em
-}
-.navContent,
-.verticalNav:hover .siteNavLabel  {
-  display: none;
-}
-.subNavMenu {
-  font-size:6em;
-  line-height:1em;
-  color: #fff;
+.home { 
+  color: aliceblue;
 }
 
-.verticalNav:nth-child(1){
-  right:80px;
-  background: #4adfff;
+.back-imagen {
+  background-image: url('/img/soldiers.jpg');
+  background-size: cover;
+  background-position: center;
+  padding-bottom: 21rem;
 }
-.verticalNav:nth-child(2){
-  right:40px;
-  background: #faf7f8;
+
+.back-imagen:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); /* Color de la superposición y nivel de transparencia */
 }
-.verticalNav:nth-child(3){
-  right:0px;
-  background: #761adc;
+
+.first-section {
+  position: relative;
+  z-index: 1; /* Asegura que el contenido se muestre por encima de la superposición */
 }
-.hideToggle nav {
-  margin-right:0px;
+
+.first-section p {
+  text-shadow: 2px 2px 4px rgba(16, 91, 252, 0.8);
 }
-.hideToggle .verticalNav {
-  display:none
+
+
+@media screen and (min-width: 992px) {
+  #headerNav .container-fluid {
+    justify-content: center;
+  }
 }
-#toggleRightMenu {
-  cursor : pointer
-}
-.hideToggle #toggleRightMenu {
-  transform : rotate(180deg)
-}
-  
